--- a/1.HTML
+++ b/1.HTML
@@ -13,7 +13,7 @@
     </OL>
       <H2>나를 소개하지</h2>
       <p>안녕 나는 모두들 반가워 웹을 처음으로 만들어 기분이 정말 좋다.
-       <br> 땨르르르 꺄룩 데헷
+       <br> 땨르르르 꺄룩 데헷</p>
 
   </body>
 </html>
