--- a/3.HTML
+++ b/3.HTML
@@ -12,7 +12,7 @@
       <li><a href="3.HTML">가족 소개</a></li>
     </OL>
     <h2>가족 소개</h2>
-      <p>엄마 이거 내가 만들었땅 신기하쥐 키키키</p>
+      <p>엄마 이거 내가 만들었땅 신기하쥐 키키키 보림언니 유림언니 이거보라라랄라랄 보들이 내꺼!</p>
 
   </body>
 </html>
